# bcdice-qt

./: .gitmodules
bcdice-irc-bot/: .gitignore  Gemfile  Rakefile
bcdice-irc-bot/exe/: bcdice-irc-client_for_test.rb  bcdice-irc-server.rb  bcdice-irc-server.sh
bcdice-irc-bot/lib/bcdice-irc/: irc_bot_config.rb  mediator.rb
bcdice-irc-bot/lib/bcdice-irc/rpc/: bcdice_info_service.rb
bcdice-irc-bot/lib/bcdice_irc_proto/: bcdice_info_pb.rb  bcdice_info_services_pb.rb
bcdice-irc-proto/: .editorconfig  LICENSE  README.md  bcdice_info.proto  bcdice_irc.proto
bcdice-irc-qt/: .clang-format  CMakeLists.txt  Makefile  README.md  translations.qrc
bcdice-irc-qt/cmake/: grpc.cmake
bcdice-irc-qt/src/: .editorconfig  bcdiceinfoclient.cpp  bcdiceinfoclient.h  bcdiceinformationfetch.cpp  bcdiceinformationfetch.h  bcdiceversioninfo.h  gamesystem.cpp  gamesystem.h  grpcsettingsdialog.cpp  grpcsettingsdialog.h  grpcsettingsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h
bcdice-irc-qt/translations/: bcdice-irc-qt_ja_JP.ts
